--- a/index.html
+++ b/index.html
@@ -4,9 +4,43 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>teste de imagens no fundo</title>
-    <style></style>
+    <style>
+        
+        div.bloco{
+            height: 200px;
+            margin: 5px;
+            border: 1px solid black;
+            background-image: url(imagens-cap19/wallpaper003.jpg);
+            border-radius: 5px;
+            background-repeat: no-repeat;
+            background-size: 100%;
+        }
+        div#img1{
+            background-position: right center;
+        }
+        div#img2{
+            background-position: left bottom;
+        }
+        div#img3{
+            background-position: center center;
+        }
+        div#img4{
+            background-position: right bottom;
+        }
+    </style>
 </head>
 <body>
-    <div></div>
+    <div class="bloco" id="img1">
+
+    </div>
+    <div class="bloco" id="img2">
+
+    </div>
+    <div class="bloco" id="img3">
+
+    </div>
+    <div class="bloco" id="img4">
+
+    </div>
 </body>
 </html>
