--- a/tabelas/index5.html
+++ b/tabelas/index5.html
@@ -22,6 +22,7 @@
             font-weight: bolder;
             padding: 10px;
             background-color: lightgray;
+            border: 1px solid black;
         }
         thead > tr > th{
             position: sticky;
@@ -55,6 +56,7 @@
 
     <h1>Uso de tabelas grandes</h1>
     <table>
+        <caption>Tabela de População Brasileira</caption>
         <thead>
             <th>Estado</th>
             <th>População</th>
