--- a/tabelas/desafio2.html
+++ b/tabelas/desafio2.html
@@ -27,10 +27,10 @@
 <body>
     <table>
         <thead>
-                      <th rowspan="2">Area</th>
-                      <th rowspan="2">Disciplina</th>
+                      <th rowspan="2" scope="col">Area</th>
+                      <th rowspan="2" scope="colgroup">Disciplina</th>
                           <th colspan="2">Notas</th> 
-                          <th rowspan="2">Media</th>
+                          <th rowspan="2" scope="col">Media</th>
                           <tr>
                               <th>nota 1</th>
                               <th>nota 2</th>
@@ -38,7 +38,7 @@
                       
         </thead>
         <tbody>
-            <td rowspan="5" class="titulo">Exatas</td>
+            <td rowspan="5" scope="rowgroup" class="titulo" >Exatas</td>
             <tr>
                 <td>Matematica</td>
                 <td>0.3</td>
@@ -64,10 +64,10 @@
                 <td>0.0</td>
             </tr>
             <tr>
-                <th colspan="4" style="text-align: left;">Media</th>
+                <th colspan="4" style="text-align: left;" scope="colgroup">Media</th>
                 <th>0.0</th>
             </tr>
-            <td rowspan="3" class="titulo">Humanas</td>
+            <td rowspan="3" class="titulo" scope="rowgroup">Humanas</td>
             <tr>
                 <td>Porugues</td>
                 <td>0.0</td>
@@ -81,7 +81,7 @@
                 <td>0.0</td>
             </tr>
             <tr>
-                <th colspan="4" style="text-align: left;">Media de Humanas</th>
+                <th colspan="4" style="text-align: left;" scope="col">Media de Humanas</th>
                 <th>0.0</th>
             </tr>
 
