--- a/aula_3/form003.html
+++ b/aula_3/form003.html
@@ -21,14 +21,13 @@
             <input type="password" name="sen" id="isenha" 
             required minlength="10" placeholder="digite sua senha***">
         </p>
+        
         <p>
             <label for="ihora" >Hora:</label>
             <input type="time" name="hora" id="ihora">
         </p>
         <p><input type="submit" value="enviar">
-        
-        </p>
-        <p><input type="reset" value="limpar">
+        <input type="reset" value="limpar">
         </p>
     </form>
 </body>
