--- a/aulas_de_javascript/exe003.html
+++ b/aulas_de_javascript/exe003.html
@@ -6,14 +6,12 @@
     <title>Exercicio 01</title>
     <link rel="stylesheet" href="estilo.css">
 </head>
-<body>
-    <header> <h1>cabeçalho</h1></header>
+<body onload="carregar()">
+    <header> <h1>Hora do dia</h1></header>
     <section>
-        <div>
-            test
+        <div id="msg">
         </div>
-        <div>
-            sla..
+        <div id="imagens"><img src="fotomanha.jpg" alt="foto_manha" id="imagens">
         </div>
     </section>
     <footer><p>exercicio 1 &copy;</p></footer>
