conclusão do exercicio 02

--- a/aulas_de_javascript/exe003.html
+++ b/aulas_de_javascript/exe003.html
@@ -11,7 +11,7 @@
     <section>
         <div id="msg">
         </div>
-        <div id="imagens"><img src="fotomanha.jpg" alt="foto_manha" id="imagens">
+        <div id="imagens"><img src="manhafoto.png" alt="foto_manha" id="imagens">
         </div>
     </section>
     <footer><p>exercicio 1 &copy;</p></footer>
